cabal-version:   3.0
name:            ascii-tetris
version:         0.1.0.0
license:         NONE
author:          amhsm6@gmail.com
maintainer:      amhsm6
build-type:      Simple

common warnings
    ghc-options: -Wall

executable ascii-tetris
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.18.2.1
                    , mtl
                    , lens
                    , time
                    , vector
                    , random
                    , ncurses

    hs-source-dirs:   app

    default-language: Haskell2010
